Add video placeholder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>EnviroLink- Index</title>
+  <title>EnviroLink</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -135,11 +135,28 @@
           </div>
         </div>
 
-        <div class="row">
-
+        <div class="row">  
+          <!-- ======= Video Section -->
+          <!-- <section id="video" class="video" style="background: whitesmoke;">
+            <div class="container" data-aos="fade-up">
+              <div class="section-title">
+                <p>Video</p>
+                <h2> </h2>
+              </div>
+              <div class="section-content"  align="center">
+                <video width="800" height="500"  controls>
+                  <source src="assets/video/placeholder.mov" type="video/mov">
+                </video>
+              </div>
+            </div>
+          </section> -->
+          <!-- End Video Section -->
           <div class="col-lg-6 video-box align-self-baseline position-relative">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a>
+            <video width="650" height="400"  controls>
+              <source src="assets/video/placeholder.mov" type="video/mp4">
+            </video>
+            <!-- <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a> -->
           </div>
 
           <div class="col-lg-6 pt-3 pt-lg-0 content">
