--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <style>
+    .video-container {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%; /* 16:9 */
+      margin-bottom: 20px;
+    }
+
+    .video-container video {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
+
   <!-- =======================================================
   * Template Name: Serenity
   * Updated: May 30 2023 with Bootstrap v5.3.0
@@ -135,26 +150,14 @@
           </div>
         </div>
 
-        <div class="row">  
-          <!-- ======= Video Section -->
-          <!-- <section id="video" class="video" style="background: whitesmoke;">
-            <div class="container" data-aos="fade-up">
-              <div class="section-title">
-                <p>Video</p>
-                <h2> </h2>
-              </div>
-              <div class="section-content"  align="center">
-                <video width="800" height="500"  controls>
-                  <source src="assets/video/placeholder.mov" type="video/mov">
-                </video>
-              </div>
-            </div>
-          </section> -->
-          <!-- End Video Section -->
+        <div class="row">
           <div class="col-lg-6 video-box align-self-baseline position-relative">
-            <video width="650" height="400"  controls>
-              <source src="assets/video/placeholder.mov" type="video/mp4">
-            </video>
+            <div class="video-container">
+              <video controls>
+                <source src="assets/video/placeholder.mov" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </div>
             <!-- <img src="assets/img/about.jpg" class="img-fluid" alt="">
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a> -->
           </div>
