--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <!-- <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="about.html">About</a></li>
+              <li><a href="status.html">About</a></li>
               <li><a href="team.html">Team</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
@@ -65,14 +65,11 @@
                 </ul>
               </li>
             </ul>
-          </li>
+          </li> -->
+          <li><a href="status.html">Status</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a class="active" href="contact.html">Contact</a></li>
-
-          <li><a class="getstarted" href="about.html">Get Started</a></li>
+          <li><a class="active" href="team.html">Contact Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
