--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="hero-container" data-aos="fade-up">
       <h1>Welcome to EnviroLink</h1>
       <h2>EnviroLink: Air data, health insights, and policy suggestions for Nairobi's air quality.</h2>
-      <a href="status.html" class="btn-get-started scrollto">Get Started</a>
+      <a href="status.html" class="btn-get-started scrollto">Check Status</a>
     </div>
   </section><!-- End Hero -->
 
@@ -114,32 +114,32 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box py-5">
                   <i class="bi bi-emoji-smile"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="65" class="purecounter">0</span>
-                  <p>Happy Clients</p>
+                  <span data-purecounter-start="0" data-purecounter-end="25" class="purecounter">0</span>
+                  <p>Air Quality Index</p>
                 </div>
               </div>
 
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box py-5">
-                  <i class="bi bi-journal-richtext"></i>
+                  <i class="bi bi-cloudy"></i>
                   <span data-purecounter-start="0" data-purecounter-end="85" class="purecounter">0</span>
-                  <p>Projects</p>
+                  <p>Online Sensors</p>
                 </div>
               </div>
 
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box pb-5 pt-0 pt-lg-5">
                   <i class="bi bi-clock"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="27" class="purecounter">0</span>
-                  <p>Years of experience</p>
+                  <span data-purecounter-start="0" data-purecounter-end="325" class="purecounter">0</span>
+                  <p>Uptime (Hours)</p>
                 </div>
               </div>
 
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box pb-5 pt-0 pt-lg-5">
-                  <i class="bi bi-award"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="22" class="purecounter">0</span>
-                  <p>Awards</p>
+                  <i class="bi bi-journal-check"></i>
+                  <span data-purecounter-start="0" data-purecounter-end="10" class="purecounter">0</span>
+                  <p>Issues resolved</p>
                 </div>
               </div>
 
@@ -160,21 +160,23 @@
           </div>
 
           <div class="col-lg-6 pt-3 pt-lg-0 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>EnviroLink: A platform to improve air quality and health of Nairobi people</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              In alignment with the United Nations' 17 Sustainable Development Goals, our project targets the improvement of "Good Health and Well-being" by addressing the issue of poor air quality, a leading cause of premature death.
             </p>
+            <p>The success of our project hinges on four critical elements: </p>
             <ul>
-              <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bx bx-check-double"></i> Voluptate repellendus pariatur reprehenderit corporis sint.</li>
-              <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bx bx-check-double"></i> Collaborative efforts between government</li>
+              <li><i class="bx bx-check-double"></i> Collaborative efforts between businesses</li>
+              <li><i class="bx bx-check-double"></i> Robust academic research</li>
+              <li><i class="bx bx-check-double"></i> Active public engagement</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              This problem is particularly concerning in Nairobi, where most of 
+              the population faces barriers to healthcare due to socioeconomic 
+              constraints. However, a dearth of centralised, reliable data 
+              regarding air quality and its health impacts impedes persuasive 
+              argumentation to stakeholders.
             </p>
           </div>
 
@@ -188,9 +190,11 @@
       <div class="container" data-aos="fade-in">
 
         <div class="text-center">
-          <h3>Call To Action</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
+          <h3>Wellness Analytics</h3>
+          <p> Explore comprehensive health insights on the Wellness Analytics 
+            webpage, revealing the impact of air pollution on public well-being 
+            in Nairobi and aiding informed decision-making.</p>
+          <a class="cta-btn" href="#">Wellness Analytics</a>
         </div>
 
       </div>
@@ -208,45 +212,42 @@
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">Data Collection and Aggregation</a></h4>
+              <ul class="description">
+                <li>Collect existing air quality data for Nairobi from various sources and use sensors to gather localised data.</li>
+                <li>Create a comprehensive database by aggregating all collected data.</li>
+              </ul>
             </div>
           </div>
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-book" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href="">Data Visualization and Analysis</a></h4>
+              <ul class="description">
+                <li>Visualize air quality data on a map for easy understanding and exploration.</li>
+                <li>Provide historical trends and real-time updates to monitor changes in air pollution.</li>
+              </il>
             </div>
           </div>
 
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-card-checklist" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <div class="icon"><i class="bi bi-binoculars" style="color: #3fcdc7;"></i></div>
+              <h4 class="title"><a href="">Health Impact Assessment</a></h4>
+              <ul class="description">
+                <li>Assess the health risks associated with air pollution in Nairobi based on scientific research.</li>
+                <li>Generate personalised health risk assessments using location and demographic information.</li>
+              </ul>
             </div>
           </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-binoculars" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-          </div>
-
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box">
-              <div class="icon"><i class="bi bi-globe" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-          </div>
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box">
-              <div class="icon"><i class="bi bi-clock" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <div class="icon"><i class="bi bi-card-checklist" style="color:#41cf2e;"></i></div>
+              <h4 class="title"><a href="">Policy Recommendations</a></h4>
+              <ul class="description">
+                <li>Analyse air quality data, health impact assessments, and best practices to suggest effective policies.</li>
+                <li>Offer specific policy measures such as emissions controls and urban planning guidelines.</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -257,7 +258,7 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+  <!-- <footer id="footer">
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -318,10 +319,11 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/serenity-bootstrap-corporate-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!--Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-  </footer><!-- End Footer -->
+  </footer> -->
+  <!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
