Add anchor for status page

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Data Collection and Aggregation</a></h4>
+              <h4 class="title"><a href="status.html#data-collection">Data Collection and Aggregation</a></h4>
               <ul class="description">
                 <li>Collect existing air quality data for Nairobi from various sources and use sensors to gather localised data.</li>
                 <li>Create a comprehensive database by aggregating all collected data.</li>
@@ -222,7 +222,7 @@
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-book" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Data Visualization and Analysis</a></h4>
+              <h4 class="title"><a href="status.html#data-analysis">Data Visualization and Analysis</a></h4>
               <ul class="description">
                 <li>Visualize air quality data on a map for easy understanding and exploration.</li>
                 <li>Provide historical trends and real-time updates to monitor changes in air pollution.</li>
@@ -243,7 +243,7 @@
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-card-checklist" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Policy Recommendations</a></h4>
+              <h4 class="title"><a href="status.html#policy-suggestions">Policy Recommendations</a></h4>
               <ul class="description">
                 <li>Analyse air quality data, health impact assessments, and best practices to suggest effective policies.</li>
                 <li>Offer specific policy measures such as emissions controls and urban planning guidelines.</li>
