--- a/status.html
+++ b/status.html
@@ -179,7 +179,7 @@
 
     <!-- ======= Work Process Section ======= -->
     <section id="work-process" class="work-process">
-      <div class="container">
+      <div class="container" id="data-collection">
 
         <div class="section-title" data-aos="fade-up">
           <h2>Data Visualisation</h2>
@@ -264,7 +264,7 @@
 
     <!-- ======= Our Skills Section ======= -->
     <section id="skills" class="skills section-bg">
-      <div class="container">
+      <div class="container" id="data-analysis">
 
         <div class="section-title" data-aos="fade-up">
           <h2>Data Analysis</h2>
@@ -327,13 +327,14 @@
     </section><!-- End Our Skills Section -->
 
     <section id="testimonials" class="testimonials">
-      <div class="container">
+      <div class="container" id="policy-suggestions">
 
         <div class="section-title">
           <h2>Policy Suggestions</h2>
           <p>Policies that could help reduce air pollution</p>
         </div>
-
+        <p>Given that the transportation may be the most probable cause, the 
+          platform gives the following suggestions:</p>
         <div>
           <ul>
             <li>Using low emission vehicles for public transport</li>
