--- a/wellness-analytics.html
+++ b/wellness-analytics.html
@@ -67,7 +67,7 @@
             </ul>
           </li> -->
           <li><a href="status.html">Status</a></li>
-          <li><a class="active" href="services.html">Services</a></li>
+          <li><a class="active" href="wellness-analytics.html">Wellness Analytics</a></li>
           <li><a href="team.html">Contact Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
