Add references for wellness analytics in index page

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <p> Explore comprehensive health insights on the Wellness Analytics 
             webpage, revealing the impact of air pollution on public well-being 
             in Nairobi and aiding informed decision-making.</p>
-          <a class="cta-btn" href="#">Wellness Analytics</a>
+          <a class="cta-btn" href="wellness-analytics.html">Wellness Analytics</a>
         </div>
 
       </div>
@@ -232,7 +232,7 @@
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-binoculars" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Health Impact Assessment</a></h4>
+              <h4 class="title"><a href="wellness-analytics.html">Health Impact Assessment</a></h4>
               <ul class="description">
                 <li>Assess the health risks associated with air pollution in Nairobi based on scientific research.</li>
                 <li>Generate personalised health risk assessments using location and demographic information.</li>
