--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="col-lg-6 video-box align-self-baseline position-relative">
             <div class="video-container">
               <video controls>
-                <source src="assets/video/placeholder.mp4" type="video/mp4">
+                <source src="assets/video/demo.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
             </div>
