--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
           </li> -->
           <li><a href="status.html">Status</a></li>
           <li><a href="wellness-analytics.html">Wellness Analytics</a></li>
-          <li><a href="team.html">Contact Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -150,7 +149,7 @@
           <div class="col-lg-6 video-box align-self-baseline position-relative">
             <div class="video-container">
               <video controls>
-                <source src="assets/video/demo.mp4" type="video/mp4">
+                <source src="assets/video/intro.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
             </div>
