--- a/status.html
+++ b/status.html
@@ -27,6 +27,21 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <style>
+    .video-container {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%; /* 16:9 */
+      margin-bottom: 20px;
+    }
+
+    .video-container video {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
+
   <!-- =======================================================
   * Template Name: Serenity
   * Updated: May 30 2023 with Bootstrap v5.3.0
@@ -68,7 +83,6 @@
           </li> -->
           <li><a class="active" href="status.html">Status</a></li>
           <li><a href="wellness-analytics.html">Wellness Analytics</a></li>
-          <li><a href="team.html">Contact Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -185,8 +199,18 @@
         </div>
 
         <div class="row content">
-          <div class="col-md-5" data-aos="fade-right">
+          <!-- <div class="col-md-5" data-aos="fade-right">
             <img src="assets/img/nairobi_map.jpeg" class="img-fluid" alt="">
+          </div> -->
+          <div class="col-md-5 video-box align-self-baseline position-relative" data-aos="fade-right">
+            <div class="video-container">
+              <video controls>
+                <source src="assets/video/demo.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </div>
+            <!-- <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a> -->
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left">
             <h3>Data Collection</h3>
